# a-ice

./: .gitignore  CMakeLists.txt  README.md  SOUL.example.md  aice.desktop  config.example.json  metadata.xml
docs/dev/: RESEARCH-agent-loop.md  RESEARCH-hermes-comparative.md  RESEARCH-inline-tool-calls.md  RESEARCH-terminal-safety.md  ROADMAP-improvements.md  TODO.md  rapport-analyse.md  task-01-http-client.md  task-02-json-parse-callbacks.md  task-03-memory-leak-replies.md  task-04-cli-server-url.md  task-05-eventfilter-enter.md  task-06-clear-ui.md  task-07-layout-qmainwindow.md  task-08-streaming.md  task-09-config-gui.md  task-10-multi-models.md
src/: AiceApplet.cpp  AiceApplet.h  Bubble.cpp  Bubble.h  ChatMessage.cpp  ChatMessage.h  ChatWidget.cpp  ChatWidget.h  Config.cpp  Config.h  Glass.h  Tool.h  ToolRegistry.cpp  ToolRegistry.h  llama_client.cpp  llama_client.h  main.cpp
src/tools/: BraveSearchTool.cpp  BraveSearchTool.h  TerminalSafety.cpp  TerminalSafety.h  TerminalTool.cpp  TerminalTool.h  WebFetchTool.cpp  WebFetchTool.h
tests/: test_chatmessage.cpp  test_hardline.cpp
